--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0.0"
@@ -31,7 +31,7 @@ android {
 
     sourceSets {
         main {
-            java.srcDirs = ['src/main/java', 'src/http/java', 'src/internal/java']
+            java.srcDirs = ['src/main/java', 'src/http/java', 'src/internal/java', 'src/request/java']
         }
     }
 }
@@ -58,6 +58,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: 'testDebugUnitTest') {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:customtabs:23.3.0'
 
     // test dependencies
     testCompile 'junit:junit:4.12'
