--- a/msal/src/androidTest/AndroidManifest.xml
+++ b/msal/src/androidTest/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.microsoft.identity.client"
+    package="com.microsoft.identity.msal"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,6 +14,21 @@
         android:label="@string/app_name"
         android:allowBackup="false" >
         <uses-library android:name="android.test.runner" />
+
+        <activity
+            android:name="com.microsoft.identity.client.CustomTabActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="msauth-client-id"
+                      android:host="com.microsoft.identity.msal.test" />
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="com.microsoft.identity.client.ClientId"
+            android:value="client-id"/>
         
     </application>
 
