address comments, add state in the request sent to authorize endpoint

--- a/msal/src/main/AndroidManifest.xml
+++ b/msal/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
 
         <activity
-            android:name="com.microsoft.identity.client.CustomTabActivity"
+            android:name="com.microsoft.identity.client.BrowserTabActivity"
             android:exported="true">
         </activity>
     </application>
