--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -36,7 +36,7 @@ android {
     sourceSets {
         main {
             manifest.srcFile 'src/main/AndroidManifest.xml'
-            java.srcDirs = ['src/main/java', 'src/http/java', 'src/internal/java', 'src/request/java']
+            java.srcDirs = ['src/main/java', 'src/http/java', 'src/internal/java', 'src/request/java', 'src/authority/java']
         }
     }
 }
