--- a/automationtestapp/build.gradle
+++ b/automationtestapp/build.gradle
@@ -47,6 +47,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.2.0'
     compile project(':msal')
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
 }
