--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -47,4 +47,7 @@ android {
 dependencies {
     // Compile Dependency
     compile project(':msal')
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:design:25.2.0'
 }
