update the build.gradle and make sure release version is not debuggable

--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -23,6 +23,7 @@ android {
         }
         release {
             minifyEnabled false
+            debuggable false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
