--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -60,8 +60,8 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="msauth-5a434691-ccb2-4fd1-b97b-b64bcfbc03fc"
-                      android:host="com.microsoft.identity.client.sample" />
+                <data android:scheme="msal5a434691-ccb2-4fd1-b97b-b64bcfbc03fc"
+                      android:host="auth" />
             </intent-filter>
         </activity>
 
