--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -24,6 +24,7 @@ android {
             testCoverageEnabled true
         }
         release {
+            testCoverageEnabled true
             minifyEnabled false
             debuggable false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
