--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
-include ':msal'
+include ':msal', ':common'
+project(':common').projectDir = new File('microsoft-authentication-library-common-for-android/common')
 
 // test apps
 include ':testapps:sample'
