--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "microsoft-authentication-library-common-for-android"]
-	path = microsoft-authentication-library-common-for-android
+	path = common
 	url = https://github.com/AzureAD/microsoft-authentication-library-common-for-android.git
