--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'checkstyle'
 apply plugin: 'pmd'
 // This plugin publishes msal in to the local maven repo
 apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -192,6 +193,59 @@ task pmd(type: Pmd) {
     reports {
         xml.enabled = false
         html.enabled = true
+    }
+}
+
+// For publishing to the remote maven repo.
+publishing {
+    publications {
+        adalUnityFork(MavenPublication) {
+            groupId 'com.microsoft.identity.client'
+            artifactId 'msal'
+            version = project.version
+
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+
+                //Iterate over the compile dependencies (we don't want the test ones), adding a <dependency> node for each
+                configurations.compile.allDependencies.each {
+                    if (it.group != null && it.name != null) {
+                        def dependencyNode = dependenciesNode.appendNode('dependency')
+                        dependencyNode.appendNode('groupId', it.group)
+                        dependencyNode.appendNode('artifactId', it.name)
+                        dependencyNode.appendNode('version', it.version)
+                    }
+                }
+            }
+
+            artifact(sourcesJar)
+            artifact(javadocJar)
+            artifact("$buildDir/outputs/aar/${archivesBaseName}-${version}.aar")
+        }
+    }
+
+    // Repositories to which Gradle can publish artifacts
+    repositories {
+        maven {
+            name "vsts-maven-adal-android"
+            url "https://identitydivision.pkgs.visualstudio.com/_packaging/AndroidADAL/maven/v1"
+            credentials {
+                username project.findProperty("vstsUsername")
+                password project.findProperty("vstsMavenAccessToken")
+            }
+        }
+    }
+}
+
+// Repositories from which Gradle can fetch dependencies
+repositories {
+    maven {
+        name "vsts-maven-adal-android"
+        url "https://identitydivision.pkgs.visualstudio.com/_packaging/AndroidADAL/maven/v1"
+        credentials {
+            username project.findProperty("vstsUsername")
+            password project.findProperty("vstsMavenAccessToken")
+        }
     }
 }
 
