Address the comment. Deprecate the package visible APIs. Fix the compile bugs.

--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -44,8 +44,12 @@ android {
     }
 
     libraryVariants.all { variant ->
-        variant.outputs.all {
-            outputFileName = "${archivesBaseName}-${version}.aar"
+        variant.outputs.each { output ->
+            def outputFile = output.outputFile
+            if (outputFile != null && outputFile.name.endsWith('.aar')) {
+                def fileName = "${archivesBaseName}-${version}.aar"
+                output.outputFile = new File(outputFile.parent, fileName)
+            }
         }
     }
 }
