--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -31,6 +31,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    publishNonDefault true
 
     lintOptions {
         abortOnError true
