--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -32,6 +32,8 @@ android {
         }
     }
 
+    publishNonDefault true
+
     lintOptions {
         abortOnError true
         disable 'OldTargetApi'
