--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 # ./travis.yml for MSAL android
 
 language: android
+dist: precise
 
 jdk:
   - oraclejdk8
+
+# Don't use the Travis Container-Based Infrastructure
+sudo: true
 
 android:
   components:
@@ -12,19 +16,40 @@ android:
     - tools
     - tools
     - platform-tools
-    - build-tools-25.0.2
+    - build-tools-25.0.3
     - android-25
     - extra
     - extra-android-m2repository
     - extra-google-m2repository
+    - addon-google_apis-google-21
+    #system images
+    - sys-img-armeabi-v7a-addon-google_apis-google-21
 
 env:
+    global:
+      # This is to guaratee a clean gradle log
+      - TERM=dumb
     matrix:
       - ANDROID_SDKS=android-25 ANDROID_TARGET=android-25
 
 before_install:
   - chmod +x gradlew
 
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
+
+before_script:
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
 script:
   - cd $PWD
-  - ./gradlew clean build --info
+  - ./gradlew clean assembleRelease connectedAndroidTest -PdisablePreDex
