--- a/msal/src/main/AndroidManifest.xml
+++ b/msal/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.microsoft.identity.msal"
-    android:versionCode="1"
-    android:versionName="1.0.0">
+          package="com.microsoft.identity.msal"
+          android:versionCode="1"
+          android:versionName="1.0.0">
 
     <uses-sdk
         android:minSdkVersion="21"
@@ -15,11 +15,13 @@
         <!-- MSAL activity that will be used to process all the auth related logic  -->
         <activity
             android:name="com.microsoft.identity.client.AuthenticationActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize" />
+            android:configChanges="orientation|keyboardHidden|screenSize">
+        </activity>
 
         <!-- MSAL will use system webview (custom tab) to render the sign-in page, BrowserTabActivity is to get response back from System Webview. Multiple apps on the device could integrate MSAL, OS will check which BrowserTabActivity can handle the intent based on the intent filter declared, so this activity has to be exported.-->
         <activity
             android:name="com.microsoft.identity.client.BrowserTabActivity"
-            android:exported="true" />
+            android:exported="true">
+        </activity>
     </application>
 </manifest>
