--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ android:
     # Travis has a bug that we need to workaround to use sdk 25
     # https://github.com/travis-ci/travis-ci/issues/6059
     - tools
-    - tools
     - platform-tools
-    - build-tools-25.0.3
+    - build-tools-26.0.2
     - android-25
+	- android-21
     - extra
     - extra-android-m2repository
     - extra-google-m2repository
