--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -105,15 +105,24 @@ dependencies {
     implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
     // test dependencies
     testImplementation "junit:junit:$rootProject.ext.junitVersion"
-    testImplementation "org.mockito:mockito-core:$rootProject.ext.mockitoCoreVersion"
+    // TODO the below dependency should be mockito-core but the MockMaker isn't working...
+    testImplementation "org.mockito:mockito-android:$rootProject.ext.mockitoAndroidVersion"
     // instrumentation test dependencies
     androidTestImplementation "com.android.support.test:runner:$rootProject.ext.runnerVersion"
     // Set this dependency to use JUnit 4 rules
     androidTestImplementation "com.android.support.test:rules:$rootProject.ext.rulesVersion"
-    androidTestImplementation "org.mockito:mockito-core:$rootProject.ext.mockitoCoreVersion"
-    androidTestImplementation "com.google.dexmaker:dexmaker:$rootProject.ext.dexmakerMockitoVersion"
-    androidTestImplementation "com.google.dexmaker:dexmaker-mockito:$rootProject.ext.dexmakerMockitoVersion"
-    implementation project(':common')
+    androidTestImplementation "org.mockito:mockito-android:$rootProject.ext.mockitoAndroidVersion"
+    api(project(":common")) {
+        exclude group: 'com.google.code.gson', module: 'gson'
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        exclude group: 'com.nimbusds', module: 'nimbus-jose-jwt'
+        exclude group: 'org.mockito', module: 'mockito-core'
+        exclude group: 'com.google.dexmaker', module: 'dexmaker-mockito'
+        exclude group: 'org.powermock', module: 'powermock-module-junit4'
+        exclude group: 'org.powermock', module: 'powermock-module-junit4-rule'
+        exclude group: 'org.powermock', module: 'powermock-api-mockito'
+        exclude group: 'org.powermock', module: 'powermock-classloading-xstream'
+    }
 }
 
 def configDir = new File(buildscript.sourceFile.parentFile.parentFile, 'config')
