--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ android:
     - tools
     - platform-tools
     - build-tools-27.0.3
+    - android-25
     - android-27
     - extra
     - extra-android-m2repository
